@@ -1,6 +1,7 @@
 Revision history for Perl-PrereqScanner
 
 {{$NEXT}}
+  - add the POE scanner for POE components (David Golden)
 
 1.005     2011-08-17 18:39:22 America/New_York
   - stop stripping "always core" prereqs like strict and warnings
